# raglite-demo

./: .gitignore  README.md  api.http  compose-gpu.yaml  compose.yaml  demo.ipynb  embedding.env  litellm.yaml  llm.env  pyproject.toml
metrics/: README.md
metrics/prometheus/: prometheus.yml
raw_data/: urls.txt
