[tool.poetry]
name = "raglite-demo"
version = "0.1.0"
description = ""
authors = ["Phate334 <phate334@gmail.com>"]
license = "Apache2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.40.3"
trafilatura = "^1.12.0"
chromadb = "^0.5.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
